testing/tests/ui/filter-recursion.stderr
error: your template code is too deeply nested, or last expression is too complex
 --> testing/templates/filter-recursion.html:1:256
  |
       1 | ...A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A||A|A|AA|A...
         |                                                          ^ close to this token
         |
 --> tests/ui/filter-recursion.rs:4:12
  |
4 | #[template(path = "filter-recursion.html")]
  |            ^^^^
